Fix overflow in main page

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,5 @@
   height: 100vh;
   width: 100vw;
   margin: 0 auto;
+  overflow: hidden;
 }
